--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
    </head>
    <body>
       <!-- ======= Header ======= -->
-      <video id="background-video" autoplay loop muted preload="auto">
+      <video id="background-video" playsinline autoplay loop muted preload="auto">
          <source src="assets/img/venom_loop.mp4" type="video/mp4">
          </video>
           <!-- ======= Header ======= -->
